TeXstudio 4.2.3
-----------------
- fix unable to save under special circumstances (#2124)
- fix stuck to save unsaved document (only in explicit root mode and with a new unsaved document,#2153) 
- xindex engine added
- fix math highlighting in keyvals (#2138)
- add context menu in embbeded pdf viewer to invert pdf colors
- more cwls


TeXstudio 4.2.2
-----------------
- more cwls
- fix crash, #2094, #2084, #2109
- use picture highlighting for tikz env and similar

TeXstudio 4.2.1
-----------------
- fix placeholder issues
- fix handling mirrored placeolder, like in issue #2063
- handle NewDocumentsCommand better for completer
- enable "open in explorer" again
- fix building for poppler >=22.x 
- more cwls

TeXstudio 4.2.0
-----------------
- more cwls
- fix key handling for some special keyboard set-ups (#2011)
- fix user menu handling
- filter available dictionaries in status/language selection
- change placeHolder behavior: autoremove when content in placeholder is changed, don't use placeholder for cutBuffer

TeXstudio 4.1.2
-----------------
- allow resizing the different sections in the symbol widget 
- fix automatic session restore on OSX/Qt6
- scale inline preview if visible linewidth is too small
- fix latex package name parsing on Qt5 builds
- added cwls
- Use Qt 6.2.2 on OSX (fixes ctrl+letter shortcut issue on OSX)

TeXstudio 4.1.1
-----------------
- fix weird OSX issue that cursor keys were not working
- allow maximise config dialog 

TeXstudio 4.1.0
-----------------
- change session format to json in order to circumvent OSX/Qt6 issue
- fix input box for chinese (#1896)
- fix update of pdf fit to text width (#1935)
- make edview accessible from js

TeXstudio 4.0.4
-----------------
- use QT6.2.1 on OSX, fix crash when checking for updates, fix restoring last session
- better pdf font substitution on windows (#1812)
- fix placing cursor for large fonts (#1908)
- more cwls

TeXstudio 4.0.3
-----------------
- fix linewidth calculation in Qt6