@@ -5,6 +5,10 @@ TeXstudio 4.2.3
 - xindex engine added
 - fix math highlighting in keyvals (#2138)
 - add context menu in embbeded pdf viewer to invert pdf colors
+- remember window state (maximized/normal) of config dialog
+- fix (and speed-up) miktex package detection
+- fix handling apostrophed words better in spellchecker (#2179)
+- reular expression in extended search behave the same as in normal search
 - more cwls
 
 
